--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div id="animation-container">
         <div id="particle-container"></div>
         
-        <img src="https://i.imgur.com/gG8OFKE.png" alt="Girasol Principal" id="main-sunflower">
+        <img src="girasol.png" alt="Girasol Principal" id="main-sunflower">
         
         <div id="butterfly">🦋</div>
     </div>
 
-    <audio id="magic-sound" src="https://www.myinstants.com/media/sounds/salamisound-1423719-magic-chime-sparkle-reveal.mp3" preload="auto"></audio>
+    <audio id="magic-sound" src="sonido.mp3" preload="auto"></audio>
 
     <script src="script.js"></script>
 </body>
