--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="animation-container">
         <div id="particle-container"></div>
         
-        <img src="girasol.png" alt="Girasol Principal" id="main-sunflower">
+        <img src="girasol.PNG" alt="Girasol Principal" id="main-sunflower">
         
         <div id="butterfly">🦋</div>
     </div>
