--- a/index.html
+++ b/index.html
@@ -2,125 +2,14 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Girasol Interactivo 🌻</title>
-    <style>
-        /* Estilos Generales y de Fondo */
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            background-color: #FFD700; /* Fondo amarillo */
-            overflow: hidden; /* Evita barras de scroll innecesarias */
-            font-family: 'Arial', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* Contenedor principal para centrar elementos */
-        .container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        /* Girasol central */
-        #girasol-central {
-            width: 150px; /* Tamaño inicial, ajustable */
-            height: auto;
-            cursor: pointer;
-            z-index: 10;
-            transition: transform 0.3s ease; /* Transición suave al tocar */
-        }
-
-        /* Efecto al pasar el mouse o tocar */
-        #girasol-central:hover {
-            transform: scale(1.1) rotate(5deg);
-        }
-        
-        /* Girasol para la lluvia (plantilla) */
-        .girasol-lluvia {
-            position: absolute;
-            top: -150px; /* Inicia fuera de la pantalla */
-            background-image: url('girasol.PNG');
-            background-size: contain;
-            background-repeat: no-repeat;
-            pointer-events: none; /* Para que no interfieran con el clic */
-            animation: lluvia 5s linear;
-        }
-
-        /* Animación de la lluvia */
-        @keyframes lluvia {
-            0% {
-                transform: translateY(0) rotate(0deg);
-                opacity: 1;
-            }
-            100% {
-                transform: translateY(120vh) rotate(720deg); /* Cae y gira */
-                opacity: 0;
-            }
-        }
-
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Girasol Interactivo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div class="container" id="animation-container">
-        <img src="girasol.PNG" alt="Girasol" id="girasol-central">
-    </div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const girasolCentral = document.getElementById('girasol-central');
-            const container = document.getElementById('animation-container');
-            let animacionActiva = false;
-
-            // Función para iniciar la lluvia de girasoles
-            function iniciarLluvia() {
-                if (animacionActiva) return; // Si ya está activa, no hacer nada
-                animacionActiva = true;
-
-                const cantidadGirasoles = 30; // Puedes ajustar este número
-
-                for (let i = 0; i < cantidadGirasoles; i++) {
-                    const girasol = document.createElement('div');
-                    girasol.classList.add('girasol-lluvia');
-                    
-                    // Propiedades aleatorias para cada girasol
-                    const tamano = Math.random() * 60 + 20; // Tamaño entre 20px y 80px
-                    girasol.style.width = `${tamano}px`;
-                    girasol.style.height = `${tamano}px`;
-                    girasol.style.left = `${Math.random() * 100}vw`; // Posición horizontal aleatoria
-                    girasol.style.animationDelay = `${Math.random() * 2}s`; // Retraso aleatorio para que no caigan todos juntos
-                    girasol.style.animationDuration = `${Math.random() * 2 + 3}s`; // Duración aleatoria entre 3s y 5s
-
-                    container.appendChild(girasol);
-
-                    // Eliminar el girasol del DOM después de que termine la animación
-                    setTimeout(() => {
-                        girasol.remove();
-                    }, 5000);
-                }
-
-                // Reiniciar la bandera de animación después de 5 segundos
-                setTimeout(() => {
-                    animacionActiva = false;
-                }, 5000);
-            }
-
-            // Event Listeners para tocar o hacer clic
-            girasolCentral.addEventListener('click', iniciarLluvia);
-            girasolCentral.addEventListener('touchstart', (e) => {
-                e.preventDefault(); // Previene el "clic fantasma" en móviles
-                iniciarLluvia();
-            });
-        });
-    </script>
-
+    <div id="sunflower-container">
+        <img src="girasol.PNG" alt="Girasol central" id="main-sunflower">
+        </div>
+    <script src="script.js"></script>
 </body>
 </html>
