--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Girasol Interactivo</title>
+    <title>Girasol Interactivo para Carla</title> <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="sunflower-container">
-        <img src="girasol.PNG" alt="Girasol central" id="main-sunflower">
-        </div>
+        <h1 id="carla-name">Carla</h1> <img src="girasol.PNG" alt="Girasol central" id="main-sunflower">
+        <div id="fireflies-container"></div> </div>
     <script src="script.js"></script>
 </body>
 </html>
